syntax = "proto3";

option go_package = "gitlab.up.pt/classes/sdle/2025/t2/g01";

message RingView {
  map<uint64, string> token_to_node = 1;
}

message Request {
  string origin = 1; // id of the node that sent the request
  oneof request_type {
    RequestPing ping = 11;
    RequestFetchRing fetch_ring = 12;
    RequestGossipJoin gossip_join = 13;
    RequestGetHashSpace get_hash_space = 14;
    RequestGet get = 15;
    RequestPut put = 16;
    RequestDelete delete = 17;
    RequestHas has = 18;
  }
}


// Membership requests

message RequestPing {
}

message RequestFetchRing {
}

message RequestGossipJoin {
  string new_node_id = 1;
  repeated uint64 tokens = 2;
}

message RequestGetHashSpace {
  uint64 start_hash_space = 1;
  uint64 end_hash_space = 2;
}

// CRUD requests

message RequestGet {
  string key = 1;
}

message RequestPut {
  string key = 1;
  bytes value = 2;
}

message RequestDelete {
  string key = 1;
}

message RequestHas {
  string key = 1;
}

// Responses

message Response {
  string origin = 1; // id of the node that sent the response
  bool ok = 2;
  string error = 3;
  oneof response_type {
    ResponsePing ping = 11;
    ResponseFetchRing fetch_ring = 12;
    ResponseGossipJoin gossip_join = 13;
    ResponseGetHashSpace get_hash_space = 14;
    ResponseGet get = 15;
    ResponsePut put = 16;
    ResponseDelete delete = 17;
    ResponseHas has = 18;
  }
}

message ResponsePing {
  string pong_message = 1;
}

message ResponseFetchRing {
  RingView ring_view = 1;
}

message ResponseGossipJoin {
}

message ResponseGetHashSpace {
  map<string, bytes> hashSpaceValues = 1;
}

message ResponseGet {
  bytes value = 1;
}

message ResponsePut {
}

message ResponseDelete {
}

message ResponseHas {
  bool has_key = 1;
}
